[package]
name = "fake_video_reconstruction"
version = "0.1.0"
edition = "2024"

[dependencies]
peppygen = { path = ".peppy/libs/peppygen" }
peppylib = { path = ".peppy/libs/peppygen/crates/peppylib" }
bytes = "1"
tokio = { version = "1.47", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
serde = "1"
ffmpeg-next = "8"
tempfile = "3"
